# r-shell

./: .gitignore  Cargo.toml
core/r-command/: Cargo.toml
core/r-command/src/: lib.rs
core/r-command/src/commands/: cat.rs  cd.rs  clear.rs  exit.rs  ls.rs  mod.rs
core/r-command/src/commands/args/: cat_args.rs  cd_args.rs  ls_args.rs  mod.rs
core/r-common/: Cargo.toml
core/r-common/src/: action.rs  args.rs  command_args.rs  error.rs  lib.rs
core/r-context/: Cargo.toml
core/r-context/src/: action.rs  context.rs
core/r-core/: Cargo.toml
core/r-core/src/: app.rs
core/r-error/: Cargo.toml
core/r-error/src/: lib.rs
core/r-parser/: Cargo.toml
core/r-parser/src/: lib.rs
r-command/: Cargo.toml
r-command/src/: lib.rs
r-command/src/commands/: cat.rs  cd.rs  clear.rs  exit.rs  ls.rs  mod.rs
r-context/: Cargo.toml
r-context/src/: lib.rs
r-error/src/: lib.rs
r-parser/src/: data.rs  lib.rs
src/: main.rs
