[package]
name = "rshell"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
once_cell = "1.8.0"
crossterm = "0.20.0"

r-command = { path = "./r-command" }
r-error = { path = "./r-error" }
r-context = { path = "./r-context" }
r-parser = { path = "./r-parser" }
