[package]
name = "r-command"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
structopt = "0.3"

r-parser = { path = "../r-parser" }
r-context = { path = "../r-context" }
r-common = { path = "../r-common" }
