[package]
name = "r-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"

r-context = { path = "../r-context" }
r-command = { path = "../r-command" }
r-parser = { path = "../r-parser" }
r-common = { path = "../r-common" }
